--- a/rpm/hawaii-widget-styles.yaml
+++ b/rpm/hawaii-widget-styles.yaml
@@ -1,5 +1,5 @@
 Name       : hawaii-widget-styles
-Version    : 0.2.0.20140323.881d688
+Version    : 0.2.90
 Release    : 1
 Group      : Applications/System
 License    : LGPL 2.1
